--- a/app/src/main/res/layout/recyclerview_posts_row.xml
+++ b/app/src/main/res/layout/recyclerview_posts_row.xml
@@ -54,7 +54,7 @@
                     android:fontFamily="@font/poppinsregular"
 
                     android:includeFontPadding="false"
-                    android:textColor="@color/Black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
 
@@ -68,15 +68,15 @@
                     android:includeFontPadding="false"
                     android:text="sqssss"
 
-                    android:textColor="@color/Black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="@dimen/_10sdp" />
             </LinearLayout>
 
             <ImageView
-android:layout_alignParentRight="true"
                 android:id="@+id/imgpostType"
                 android:layout_width="@dimen/_13sdp"
                 android:layout_height="@dimen/_13sdp"
+                android:layout_alignParentRight="true"
                 android:gravity="right"
                 android:src="@drawable/roundicon"
                 app:tint="@android:color/holo_orange_dark" />
@@ -92,7 +92,7 @@ android:layout_alignParentRight="true"
             android:layout_marginTop="@dimen/_5sdp"
             android:fontFamily="@font/poppinsmedium"
 
-            android:textColor="@color/Black"
+            android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/_13sdp" />
 
         <ImageView
@@ -134,7 +134,7 @@ android:layout_alignParentRight="true"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:fontFamily="@font/poppinsregular"
-                    android:textColor="@color/Black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="@dimen/_12sdp" />
             </LinearLayout>
 
@@ -161,7 +161,7 @@ android:layout_alignParentRight="true"
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:fontFamily="@font/poppinsregular"
                     android:text="Reply"
-                    android:textColor="@color/Black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="@dimen/_12sdp" />
             </LinearLayout>
 
@@ -190,7 +190,7 @@ android:layout_alignParentRight="true"
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:fontFamily="@font/poppinsregular"
                     android:text="Share"
-                    android:textColor="@color/Black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="@dimen/_12sdp" />
             </LinearLayout>
         </RelativeLayout>
