--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,7 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
@@ -14,6 +15,13 @@
             android:id="@+id/nav_to_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
+        <item
+            android:id="@+id/darkModeMenu"
+            android:title="Dark Mode"
+            android:checked="false"
+            android:icon="@drawable/ic_baseline_light_mode_24"
+            app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
+            ></item>
         <item
             android:id="@+id/logout"
             android:icon="@android:drawable/ic_lock_lock"
