--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,5 +7,13 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_directMessage"
+        app:showAsAction="always"
+
+
+        android:icon="@drawable/ic_baseline_chat_w"
+        android:title="Direct Message">
+    </item>
 
 </menu>
